--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta property="og:title" content="Услуги адвоката. Все виды правовой помощи в Киеве. Адвокати Халупко С.В., Тоцький Б.А., Лопушенко А.М">
     <meta name="keywords" content="advocate, attorney, business, consult, consultant, consulting, corporate, government, justice, law, lawyer, lawyers, legal, political">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://advokatkiev.com.ua/">
+<meta property="og:url" content="">
 <meta property="og:image" content="">
 <meta name="description" content=" Послуги адвоката. Всі види правової допомоги в Києві. Доступні ціни. Адвокат у Києві. Адвокати Халупко С.В., Тоцький Б.А., Лопушенко А.М. Захист фізичних осіб в кримінальних справах, підготовка позовів, скарг, заяв, претензій, договорів та інших юридичних документів, представництво в судах по цивільним, господарським та адміністративним справам, податкові спори, юридичні консультації та інші види правової допомоги в Києві.">
    	<!-- ==============================================
 	Favicons
 	=============================================== -->
-<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="57x57" href="/lawyers/images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
@@ -99,7 +99,7 @@
 			<div class="container">
 			    <nav id="navbar-example" class="navbar navbar-expand-lg">
 			        <h1><a class="navbar-brand" href="/">
-						<!-- <img src="images/logo.png" class="img-fluid" alt=""> -->
+						<img src="images/logo.png" class="img-fluid" alt="">
 					</a></h1>
 			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			            <span class="navbar-toggler-icon"></span>
