--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    	<!-- ==============================================
 	Favicons
 	=============================================== -->
-<link rel="apple-touch-icon" sizes="57x57" href="/lawyers/images/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="57x57" href="images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="images/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="images/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="images/apple-icon-76x76.png">
@@ -98,7 +98,7 @@
 		<div class="navbar-main">
 			<div class="container">
 			    <nav id="navbar-example" class="navbar navbar-expand-lg">
-			        <h1><a class="navbar-brand" href="/">
+			        <h1><a class="navbar-brand" href="/lawyers/">
 						<img src="images/logo.png" class="img-fluid" alt="">
 					</a></h1>
 			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
