--- a/contacts/index.html
+++ b/contacts/index.html
@@ -98,7 +98,7 @@
 		<div class="navbar-main">
 			<div class="container">
 			    <nav id="navbar-example" class="navbar navbar-expand-lg">
-			        <a class="navbar-brand" href="/">
+			        <a class="navbar-brand" href="/lawyers/">
 						<img src="/lawyers/images/logo.png" alt="">
 					</a>
 			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
