--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 	<link rel="stylesheet" type="text/css" href="css/vendor/owl.theme.default.min.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/magnific-popup.css">
 	<link rel="stylesheet" type="text/css" href="css/vendor/animate.min.css">
-
 	<!-- ==============================================
 	Custom Stylesheet
 	=============================================== -->
@@ -156,7 +155,7 @@
 	            	<div class="wrap-caption">
 		                <h1 class="caption-heading">Договір іпотеки</h1>
 		                <p>Що потрібно знати</p>
-		                <a href="/media/" class="btn btn-primary">Читати далі</a><!-- вставить ссилку на сторінку-->
+		                <a href="/lawyers/media/" class="btn btn-primary">Читати далі</a><!-- вставить ссилку на сторінку-->
 		            </div>  
 	            </div>
 	    	</div>
@@ -167,7 +166,7 @@
 	            	<div class="wrap-caption">
 		                <h1 class="caption-heading"><br>Затримання особи.</h1>
 		                <p>Правила поведінки.</p>
-		                <a href="/media/" class="btn btn-primary">Читати далі</a>
+		                <a href="/lawyers/media/" class="btn btn-primary">Читати далі</a>
 		            </div>  
 	            </div>
 	        </div> 
@@ -425,7 +424,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 col-md-12">
-							<h2 class="section-heading text-center "style="color: #00aeef">
+							<h2 class="section-heading text-center "style="color: #0048ff">
 							Що кажуть клієнти
 						</h2>
 						<p class="subheading text-center mb-5">Кожна справа дуже важлива для нас і ми завжди турбуємось про комфорт наших клієнтів.</p>
@@ -519,17 +518,106 @@
 		<div class="content-wrap">
 			<div class="container">
 				<div class="row">
-
 					<div class="col-sm-12 col-md-12">
 						<h2 class="section-heading text-center mb-4">
 							Наші адвокати
 						</h2>
 						<p class="subheading text-center mb-5">Кожна справа дуже важлива для нас і ми завжди турбуємось про комфорт наших клієнтів.</p>
 					</div>
-					
 				</div>
 				<div class="row">
-					<!-- Item 1 -->
+
+					<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
+						<div class="flip-card">
+						  <div class="flip-card-inner">
+						    <div class="flip-card-front">
+						      <img src="images/attorney.jpg" alt="" class="img-fluid rounded">
+						      <h5>Халупко Сергій</h5> 						      
+						    </div>
+						    <div class="flip-card-back">
+						      <h4>Халупко Сергій</h4> 
+						      <p>Адвокат</p> 
+						      <p>Спеціалізується на адміністративному праві</p>
+		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
+						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
+									<a href="#"><i class="fa fa-facebook"></i></a> 
+									<a href="#"><i class="fa fa-twitter"></i></a> 
+									<a href="#"><i class="fa fa-instagram"></i></a> 
+									<a href="#"><i class="fa fa-linkedin"></i></a> 
+								</div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
+						<div class="flip-card">
+						  <div class="flip-card-inner">
+						    <div class="flip-card-front">
+						      <img src="images/attorney.jpg" alt="" class="img-fluid rounded">
+						      <h5>Халупко Сергій</h5>			      
+						    </div>
+						    <div class="flip-card-back">
+						      <h4>Халупко Сергій</h4> 
+						      <p>Адвокат</p> 
+						      <p>Спеціалізується на адміністративному праві</p>
+		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
+						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
+									<a href="#"><i class="fa fa-facebook"></i></a> 
+									<a href="#"><i class="fa fa-twitter"></i></a> 
+									<a href="#"><i class="fa fa-instagram"></i></a> 
+									<a href="#"><i class="fa fa-linkedin"></i></a> 
+								</div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
+						<div class="flip-card">
+						  <div class="flip-card-inner">
+						    <div class="flip-card-front">
+						      <img src="images/attorney.jpg" alt="" class="img-fluid rounded">
+						      <h5>Тоцький Броніслав</h5>						      
+						    </div>
+						    <div class="flip-card-back">
+						      <h4>Тоцький Броніслав</h4> 
+						      <p>Адвокат</p> 
+						      <p>Спеціалізується на цивільному праві</p>
+		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
+						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
+									<a href="#"><i class="fa fa-facebook"></i></a> 
+									<a href="#"><i class="fa fa-twitter"></i></a> 
+									<a href="#"><i class="fa fa-instagram"></i></a> 
+									<a href="#"><i class="fa fa-linkedin"></i></a> 
+								</div>
+						    </div>
+						  </div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4">
+						<div class="flip-card">
+						  <div class="flip-card-inner">
+						    <div class="flip-card-front">
+						      <img src="images/attorney.jpg" alt="" class="img-fluid rounded">
+						      <h5>Лопушенко Антон</h5>						      
+						    </div>
+						    <div class="flip-card-back">
+						      <h4>Лопушенко Антон</h4> 
+						      <p>Адвокат</p> 
+						      <p>Спеціалізується на кримінальному праві</p>
+		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
+						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
+									<a href="#"><i class="fa fa-facebook"></i></a> 
+									<a href="#"><i class="fa fa-twitter"></i></a> 
+									<a href="#"><i class="fa fa-instagram"></i></a> 
+									<a href="#"><i class="fa fa-linkedin"></i></a> 
+								</div>
+						    </div>
+						  </div>
+						</div>
+					</div>										
+<!-- 
+
+
 					<div class="col-sm-6 col-md-6 col-lg-3 mb-4">
 						<div class="rs-team-1">
 							<div class="media-box">
@@ -547,11 +635,10 @@
 							</div>
 						</div>
 					</div>
-					<!-- Item 2 -->
 					<div class="col-sm-6 col-md-6 col-lg-3 mb-4">
 						<div class="rs-team-1">
 							<div class="media-box">
-								<a href="#"><img src="images/attorney.jpg" alt="" class="img-fluid"></a>
+								<a href="#"><img src="images/attorney.jpg" alt="" class="img-fluid rounded"></a>
 							</div>
 							<div class="body">
 								<div class="title"><a href="#">Тоцький Броніслав</a></div>
@@ -565,11 +652,10 @@
 							</div>
 						</div>
 					</div>
-					<!-- Item 3 -->
 					<div class="col-sm-6 col-md-6 col-lg-3 mb-4">
 						<div class="rs-team-1">
 							<div class="media-box">
-								<a href="#"><img src="images/attorney.jpg" alt="" class="img-fluid"></a>
+								<a href="#"><img src="images/attorney.jpg" alt="" class="img-fluid rounded"></a>
 							</div>
 							<div class="body">
 								<div class="title"><a href="#">Лопушенко Антон</a></div>
@@ -586,7 +672,7 @@
 					<div class="col-sm-6 col-md-6 col-lg-3 mb-4">
 						<div class="rs-team-1">
 							<div class="media-box">
-								<a href="#"><img src="images/attorney.jpg" alt="" class="img-fluid"></a>
+								<a href="#"><img src="images/attorney.jpg" alt="" class="img-fluid rounded"></a>
 							</div>
 							<div class="body">
 								<div class="title"><a href="#">Лопушенко Антон</a></div>
@@ -599,8 +685,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					  </div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -757,7 +842,7 @@
 							</div>
 							
 							<ul class="list">
-								<li><a href="/about/" title="About Us">Про нас</a></li>
+								<li><a href="/lawyers/about/" title="About Us">Про нас</a></li>
 								<li><a href="/lawyers/attorneys/" title="Attorney">Адвокати</a></li>
 								<li><a href="/lawyers/practice/" title="Practice Areas">Практика</a></li>
 								<li><a href="/lawyers/media/" title="Articles">Статті</a></li>
@@ -810,6 +895,7 @@ function openForm() {
 	<script src="js/vendor/form-scripts.js"></script>
 
 	<script src="js/script.js"></script>
+
 
 </body>
 </html>
