--- a/attorney/index.html
+++ b/attorney/index.html
@@ -186,6 +186,16 @@
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
 		 					</div>
+		 					<div class="col-sm-5 attPic zoom mt-3">
+					            <img src="/lawyers/images/attorney.jpg" style="width: 250px; height: 300px" alt=""  class="img-fluid">
+					        </div>
+					        <div class="col-sm-7 attText mt-3">
+					            <p class="name">John Smith</p>
+					            <p class="description">Кандидат юридичних наук</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
+		 					</div>						
 		 				</div>
  				</div>
 			</div>
