--- a/contacts/index.html
+++ b/contacts/index.html
@@ -183,7 +183,7 @@
 	</div>
 
 	<!-- CONTACT -->
-	<div class="section bgi-cover-center">
+	<div class="section bgi-cover-center question">
 		<div class="content-wrap pb-0">
 			<div class="container">
 				<div class="row align-items-end">
