--- a/attorney/index.html
+++ b/attorney/index.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Адвокати</title>
+    <title>Компанія HTL Partners | Адвокати</title>
     <meta name="keywords" content="Адвокат, адвокат Київ, адвокат Халупко, адвокат Тоцький, адвокат Лопушенко, послуги адвоката Київ, юридичні послуги, вартість послуг адвоката,юридична допомога в Києві, суд, позов, поліція, СБУ, НАБУ, прокурор, закон, САП, обшук, допит, свідок, підозрюваний, обвинувачений, затриманий, затримання, незаконно, Господарський суд, Адміністративний суд, ДФС, податки, податкова, права людини, нерухомість, реєстрація, будівництво, іпотека, застава, кредит, ДТП, страхова, страховка, спадщина, вбивство, тілесні ушкодження, крадіжка, незаконний збут, ККУ, КПК, ЦПК, ГПК, договір, скарга, заява, заява про злочин">
-    <meta property="og:title" content="Услуги адвоката. Все виды правовой помощи в Киеве. Адвокат Халупко Сергей">
+    <meta property="og:title" content="Услуги адвоката. Все виды правовой помощи в Киеве. Адвокати Халупко С., Тоцький Б., Тарасенко, Романченко О.">
     <meta name="keywords" content="advocate, attorney, business, consult, consultant, consulting, corporate, government, justice, law, lawyer, lawyers, legal, political">
 <meta property="og:type" content="website">
 <meta property="og:url" content="">
 <meta property="og:image" content="">
-<meta name="description" content=" Послуги адвоката. Всі види правової допомоги в Києві. Доступні ціни. Адвокат у Києві. Адвокати Халупко С.В., Тоцький Б.А., Лопушенко А.М. Захист фізичних осіб в кримінальних справах, підготовка позовів, скарг, заяв, претензій, договорів та інших юридичних документів, представництво в судах по цивільним, господарським та адміністративним справам, податкові спори, юридичні консультації та інші види правової допомоги в Києві.">
-   	<!-- ==============================================
+<meta name="description" content=" Послуги адвоката. Всі види правової допомоги в Києві. Доступні ціни. Адвокат у Києві. Адвокати Халупко С., Тоцький Б., Тарасенко, Романченко О. Захист фізичних осіб в кримінальних справах, підготовка позовів, скарг, заяв, претензій, договорів та інших юридичних документів, представництво в судах по цивільним, господарським та адміністративним справам, податкові спори, юридичні консультації та інші види правової допомоги в Києві.">
+	  <!-- ==============================================
 	Favicons
 	=============================================== -->
 <link rel="apple-touch-icon" sizes="57x57" href="/lawyers/images/apple-icon-57x57.png">
@@ -157,40 +157,40 @@
 				
 							<p>Наша команда - це наша сила і успіх. В першу чергу ми докладаємо максимум зусиль при підборі кожного співробітника. У свою юридичну сім'ю ми приймаємо винятково <strong>висококваліфікованих і досвідчених</strong> фахівців, оскільки це є головним фактором нашого успіху.</p>
 							<div class="col-sm-5 attPic zoom">
-					            <img src="/lawyers/images/attorney.jpg" style="width: 250px; height: 300px" alt=""  class="img-fluid">
+					            <img src="/lawyers/images/khalupko.jpg"  alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText">
-					            <p class="name">John Smith</p>
+					            <h4>Халупко Сергій</h4>
 					            <p class="description">Кандидат юридичних наук</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
 		 					</div>
 							<div class="col-sm-5 attPic zoom mt-3">
-					            <img src="/lawyers/images/attorney.jpg" style="width: 250px; height: 300px" alt=""  class="img-fluid">
+					            <img src="/lawyers/images/Tarasenko.jpg" alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText mt-3">
-					            <p class="name">John Smith</p>
+					            <h4>Тарасенко ???</h4>
 					            <p class="description">Кандидат юридичних наук</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
 		 					</div>
 		 					<div class="col-sm-5 attPic zoom mt-3">
-					            <img src="/lawyers/images/attorney.jpg" style="width: 250px; height: 300px" alt=""  class="img-fluid">
+					            <img src="/lawyers/images/Totskiy.jpg" alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText mt-3">
-					            <p class="name">John Smith</p>
+					            <h4>Тоцький Броніслав</h4>
 					            <p class="description">Кандидат юридичних наук</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
 		 					</div>
 		 					<div class="col-sm-5 attPic zoom mt-3">
-					            <img src="/lawyers/images/attorney.jpg" style="width: 250px; height: 300px" alt=""  class="img-fluid">
+					            <img src="/lawyers/images/Romanchenko.jpg" alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText mt-3">
-					            <p class="name">John Smith</p>
+					            <h4>Романченко Олександр</h4>
 					            <p class="description">Кандидат юридичних наук</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
