--- a/attorney/index.html
+++ b/attorney/index.html
@@ -146,7 +146,7 @@
 					<div col-12 col-md-12 float-left mt-3>
 						<ul class="breadcrumb">
 					  	<li><a href="/lawyers">Домашня</a></li>
-					  	<li>Про нас</li>
+					  	<li>Про нашу команду</li>
 						</ul>
 					</div>
 				</div>
