--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 							</div>
 							<div class="body-content">
 								<h3>Господарські спори</h3>
-  								<div class="overlay">Юридичне консультування та представництво клієнтів у судах господарського, цивільного й адміністративного судочинства, в процедурах банкрутства й санації, а також виконавчого провадження.
+  								<div class="overlay">Господарські спори забирають значні ресурси. Спрощує процедуру, при цьому збільшуючи шанси на отримання позитивного судового рішення, юридичний супровід господарських справ у суді, зокрема представництво в господарському процесі.
   								</div>
 							</div>
 						</div>
@@ -340,7 +340,7 @@
 							</div>
 							<div class="body-content">
 								<h3>Цивільні спори</h3>
-  								<div class="overlay">Якщо в арбітражному порядку захищаються майнові права організацій, то для захисту переважно прав громадян законом передбачається інший порядок - цивільно-правовий. 
+  								<div class="overlay">Спори, що виникають між фізичними особами незалежно від громадянства. Всі справи, що розглядаються в межах цієї категорії, носять приватний характер. Запорукою успішного вирішення цивільного спору є кваліфікована юридична допомога, яку ми здатні забезпечити. 
   								</div>
   							</div>
 						</div>
@@ -352,8 +352,8 @@
 								<i class="fa fa-balance-scale"></i>
 							</div>
 							<div class="body-content">
-								<h3>Сімейні справи</h3>
-  								<div class="overlay">Сімейна тема - справа вельми делікатна. Нерідко учасники конфлікту приймають важливі рішення, керуючись емоціями. Досить часто це закінчується майновим або фінансовим збитком. 
+								<h3>Сімейні спори</h3>
+  								<div class="overlay">До цієї категорії цивільних спорів відносяться всі шлюборозлучні процеси, спори про поділ спільно нажитого майна, спори, пов'язані з дітьми (в тому числі, про позбавлення батьківських прав або визначення порядку спілкування з дитиною) і інші. 
   								</div>
 							</div>
 						</div>
@@ -366,7 +366,7 @@
 							</div>
 							<div class="body-content">
 								<h3>Податкові спори</h3>
-  								<div class="overlay">Податковий спір – це юридична ситуація, в основі якої лежать розбіжності між платниками податків і державними органами. Виникають з приводу правильності застосування норм податкового права. 
+  								<div class="overlay">Податкові перевірки. Оскарження рішень податкової перевірки.Оскарження рішень, дій чи бездіяльності представників податкової служби (може здійснюватися в адміністративному або в судовому порядку). 
   								</div>
 							</div>
 						</div>
@@ -379,7 +379,7 @@
 							</div>
 							<div class="body-content">
 								<h3>Кримінальне право</h3>
-  								<div class="overlay">Кримінальне право - це галузь права, що містить кримінально-правові норми про злочини та покарання. Суб'єктами кримінальних правовідносин є фізичні особи та держава в особі уповноважених нею органів. 
+  								<div class="overlay">Захист осіб в кримінальному процесі. Ефективна протидія органам слідства ще на етапі досудового розслідування.Зняття арешту з майна. Оскарження дій та бездіяльності слідчих, детективів, прокурорів. 
   								</div>
 							</div>
 						</div>
@@ -391,21 +391,8 @@
 								<i class="fa fa-balance-scale"></i>
 							</div>
 							<div class="body-content">
-								<h3>Корпоративні спори</h3>
-								<div class="overlay">Корпоративні спори традиційно займають одне з провідних місць за кількісними показниками винесених судових рішень та зазвичай виходять за межі розгляду однієї конкретної судової справи.
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Item 7 -->
-					<div class="col-12 col-sm-6 offset-sm-6 col-md-4 offset-md-4 mb-4 ">
-						<div class="box-icon-1 text-center">
-							<div class="icon">
-								<i class="fa fa-balance-scale"></i>
-							</div>
-							<div class="body-content">
 								<h3>Договірна робота</h3>
-								<div class="overlay">Договірна робота - це діяльність підприємства по формуванню і правовому закріпленню договірних відносин і ор­ганізації виконання договорів.
+								<div class="overlay">Підготовка, розробка, узгодження, оформлення договорів, подальший контроль за їх виконанням, а також аналіз результатів їх виконання. 
 								</div>
 							</div>
 						</div>
@@ -533,8 +520,8 @@
 						    </div>
 						    <div class="flip-card-back">
 						      <h4>Халупко Сергій</h4> 
-						      <p>Адвокат</p> 
-						      <p>Спеціалізується на адміністративному праві</p>
+						      <p class="borderBtm">Адвокат</p> 
+						      <p>Спеціалізується на кримінальному, адміністративному та господарському праві</p>
 		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
 						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
 									<a href="#"><i class="fa fa-facebook"></i></a> 
@@ -551,12 +538,12 @@
 						  <div class="flip-card-inner">
 						    <div class="flip-card-front">
 						      <img src="images/Tarasenko1.jpg" alt="" class="img-fluid rounded">
-						      <h6>Тарасенко ????</h6>			      
+						      <h6>Тарасенко Катерина</h6>			      
 						    </div>
 						    <div class="flip-card-back">
-						      <h4>Тарасенко ????</h4> 
-						      <p>Адвокат</p> 
-						      <p>Спеціалізується на адміністративному праві</p>
+						      <h4>Тарасенко Катерина</h4> 
+						      <p class="borderBtm">Адвокат</p> 
+						      <p>Спеціалізується на корпоративному та міжнародному праві</p>
 		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
 						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
 									<a href="#"><i class="fa fa-facebook"></i></a> 
@@ -577,8 +564,8 @@
 						    </div>
 						    <div class="flip-card-back">
 						      <h4>Тоцький Броніслав</h4> 
-						      <p>Адвокат</p> 
-						      <p>Спеціалізується на цивільному праві</p>
+						      <p class="borderBtm">Адвокат</p> 
+						      <p>Спеціалізується на кримінальному, господарському та міжнародному праві</p>
 		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
 						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
 									<a href="#"><i class="fa fa-facebook"></i></a> 
@@ -599,8 +586,8 @@
 						    </div>
 						    <div class="flip-card-back">
 						      <h4>Романченко Олександр</h4> 
-						      <p>Адвокат</p> 
-						      <p>Спеціалізується на кримінальному праві</p>
+						      <p class="borderBtm">Адвокат</p> 
+						      <p>Спеціалізується на земельному, цивільному та господарському праві</p>
 		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
 						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
 									<a href="#"><i class="fa fa-facebook"></i></a> 
