--- a/attorney/index.html
+++ b/attorney/index.html
@@ -161,40 +161,66 @@
 					        </div>
 					        <div class="col-sm-7 attText">
 					            <h4>Халупко Сергій</h4>
-					            <p class="description">Кандидат юридичних наук</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
+					            <p class="description">Адвокат</p>
+								<p>Практикуючий юрист з 2010 року. </p>
+								<p>У 2013 році закінчив Київську державну академію водного транспорту ім. Гетьмана Петра Конашевича-Сагайдачного, факультет «Правознавство».</p>
+								<p>Спеціалізується на комплексному захисті та супроводженні малого та середнього бізнесу.</p>
+								<ul>
+									<li>захист в кримінальному та адміністративному судочинстві;</li>
+									<li>комплексний супровід укладення зовнішньо-економічних контрактів (документальна перевірка контрагента та аналіз ризиків пов’язаних з укладенням контракту);</li>
+									<li>комплексний супровід маркетингової та рекламної діяльності;</li>
+									<li>комплексний супровід досудового та судового врегулювання майнових та немайнових спорів;</li>
+									<li>консультування з питань захисту прав споживачів</li>
+									<li>комплексне супроводження справ про повернення майна та стягнення збитків від недобросовісних контрагентів.</li>
+								</ul>           
 		 					</div>
 							<div class="col-sm-5 attPic zoom mt-3">
 					            <img src="/lawyers/images/Tarasenko.jpg" alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText mt-3">
-					            <h4>Тарасенко ???</h4>
-					            <p class="description">Кандидат юридичних наук</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
+					            <h4>Тарасенко Катерина</h4>
+					            <p class="description">Адвокат</p>
+								<p>Практикуючий юрист з 2004 року, закінчила  у 2005 році Одеський Національний Університет ім. І.І. Мечникова.</p>
+								<p>Спеціалізується з питань злиттів і поглинань,  банківського та фінансового права, корпоративного та комерційного права.</p>
+								<p>Консультує клієнтів щодо проектів у фінансовому, автопромисловому та рітейловому секторах.</p>	
+								<ul>
+									<li>консультування з питань українського права та надання експертних висновків у зв'язку з M&A трансакціями;</li>
+									<li>супровід транскордонних M&A проектів за участю українських компаній;</li>
+									<li>супровід реструктуризації кредиторської заборгованості за участю іноземних інвесторів, в тому числі за синдикованими запозиченнями.</li>
+								</ul>           
 		 					</div>
 		 					<div class="col-sm-5 attPic zoom mt-3">
 					            <img src="/lawyers/images/Totskiy.jpg" alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText mt-3">
 					            <h4>Тоцький Броніслав</h4>
-					            <p class="description">Кандидат юридичних наук</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
+					            <p class="description">Адвокат</p>
+								<p>Практикує з 2011 року. У 2012 році закінчив Національний універститет «Києво-Могилянська академія», факультет правничих наук, диплом спеціаліста з відзнакою. </p>
+								<p>У жовтні 2015 отримав свідоцтво на право зайняття адвокатською діяльністю.
+На початках юридичної практики проходив стажування в таких компанія як Укрінюрколегія, Василь Кісіль і Партнери, ЮФ «ОМП» тощо.
+</p>
+								<p>З 2012 по 2016 роки працював на різних посадах, в т.ч. керівних у Державному концерні «Укроборонпром». У другій половині 2016 року приєднався до команди АО «АКіПА».</p>
+								<p>Також займається науковою діяльністю, працює над дисертаційним дослідженням в галузі земельного права.</p>
+								<p>Спеціалізується з питань антимонопольного та конкурентного права, корпоративного та комерційного права, вирішення спорів.</p>
+								<ul>
+									<li>супровід на міжнародному та національному рівнях міжнародних арбітражних спорів;</li>
+									<li>комплексне супроводження проектів розвитку підприємств різних галузей промисловості, в т.ч. оборонно-промислового комплексу;</li>
+									<li>комплексне супроводження справ про повернення майна та стягнення збитків від недобросовісних контрагентів.</li>
+								</ul>      
 		 					</div>
 		 					<div class="col-sm-5 attPic zoom mt-3">
 					            <img src="/lawyers/images/Romanchenko.jpg" alt=""  class="img-fluid">
 					        </div>
 					        <div class="col-sm-7 attText mt-3">
 					            <h4>Романченко Олександр</h4>
-					            <p class="description">Кандидат юридичних наук</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus fuga enim illum ex quos vero.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nisi ad est molestias accusantium, eaque.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit tenetur odio, laboriosam quia beatae esse.</p>	           
+					            <p class="description">Адвокат</p>
+								<p>Практикуючий юрист з 2007 року.</p>
+								<p>Закінчив у 2007-му Київський національний університет внутрішніх справ за спеціальністю «Правознавство». Здобув кваліфікацію юриста.</p>
+								<p>Спеціалізується на питаннях цивільного, господарського, земельного, комерційного та трудового права, а також з питань вирішення судових спорів.</p>
+								<ul>
+									<li>супроводження спорів по поверненню майна та стягнення збитків від недобросовісних контрагентів, в тому числі в разі відмови орендаря звільнити об'єкт;</li>
+									<li>супроводження проблемних спорів щодо земельних питань, в т.ч. дострокове розірвання договорів оренди землі, повернення земельної ділянки, зміна розміру орендної плати та внесення змін до тексту «типових» договорів тощо.</li>
+								</ul>        
 		 					</div>						
 		 				</div>
  				</div>
