--- a/attorney/index.html
+++ b/attorney/index.html
@@ -156,10 +156,10 @@
 							</div>
 				
 							<p>Наша команда - це наша сила і успіх. В першу чергу ми докладаємо максимум зусиль при підборі кожного співробітника. У свою юридичну сім'ю ми приймаємо винятково <strong>висококваліфікованих і досвідчених</strong> фахівців, оскільки це є головним фактором нашого успіху.</p>
-							<div class="col-sm-5 attPic zoom">
+							<div class="col-sm-6 attPic zoom">
 					            <img src="/lawyers/images/Khalupko.jpg"  alt=""  class="img-fluid">
 					        </div>
-					        <div class="col-sm-7 attText">
+					        <div class="col-sm-6 attText">
 					            <h4>Халупко Сергій</h4>
 					            <p class="description">Адвокат</p>
 								<p>Практикуючий юрист з 2010 року. </p>
@@ -174,10 +174,10 @@
 									<li>комплексне супроводження справ про повернення майна та стягнення збитків від недобросовісних контрагентів.</li>
 								</ul>           
 		 					</div>
-							<div class="col-sm-5 attPic zoom mt-3">
+							<div class="col-sm-6 attPic zoom mt-3">
 					            <img src="/lawyers/images/Tarasenko.jpg" alt=""  class="img-fluid">
 					        </div>
-					        <div class="col-sm-7 attText mt-3">
+					        <div class="col-sm-6 attText mt-3">
 					            <h4>Тарасенко Катерина</h4>
 					            <p class="description">Адвокат</p>
 								<p>Практикуючий юрист з 2004 року, закінчила  у 2005 році Одеський Національний Університет ім. І.І. Мечникова.</p>
@@ -189,10 +189,10 @@
 									<li>супровід реструктуризації кредиторської заборгованості за участю іноземних інвесторів, в тому числі за синдикованими запозиченнями.</li>
 								</ul>           
 		 					</div>
-		 					<div class="col-sm-5 attPic zoom mt-3">
+		 					<div class="col-sm-6 attPic zoom mt-3">
 					            <img src="/lawyers/images/Totskiy.jpg" alt=""  class="img-fluid">
 					        </div>
-					        <div class="col-sm-7 attText mt-3">
+					        <div class="col-sm-6 attText mt-3">
 					            <h4>Тоцький Броніслав</h4>
 					            <p class="description">Адвокат</p>
 								<p>Практикує з 2011 року. У 2012 році закінчив Національний універститет «Києво-Могилянська академія», факультет правничих наук, диплом спеціаліста з відзнакою. </p>
@@ -208,10 +208,10 @@
 									<li>комплексне супроводження справ про повернення майна та стягнення збитків від недобросовісних контрагентів.</li>
 								</ul>      
 		 					</div>
-		 					<div class="col-sm-5 attPic zoom mt-3">
+		 					<div class="col-sm-6 attPic zoom mt-3">
 					            <img src="/lawyers/images/Romanchenko.jpg" alt=""  class="img-fluid">
 					        </div>
-					        <div class="col-sm-7 attText mt-3">
+					        <div class="col-sm-6 attText mt-3">
 					            <h4>Романченко Олександр</h4>
 					            <p class="description">Адвокат</p>
 								<p>Практикуючий юрист з 2007 року.</p>
@@ -237,7 +237,7 @@
 						<h2 class="section-heading">
 							Консультація
 						</h2>
-						<p class="subheading mb-5">Задайте питання</p>
+						<p class="subheading mb-5">Ваше запитання</p>
 						
 						<form action="#" class="form-contact" id="contactForm">
 							<div class="row">
