--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 				
 				<div class="row">
 					<!-- Item 1 -->
-					<div class="col-12 col-sm-6 col-md-6 mb-4 ">
+					<div class="col-12 col-sm-6 col-md-4 mb-4 ">
 						<div class="box-icon-1 text-center ">
 							<div class="icon">
 								<i class="fa fa-balance-scale"></i>
@@ -333,7 +333,7 @@
 						</div>
 					</div>
 					<!-- Item 2 -->
-					<div class="col-12 col-sm-6 col-md-6 mb-4 ">
+					<div class="col-12 col-sm-6 col-md-4 mb-4 ">
 						<div class="box-icon-1 text-center">
 							<div class="icon">
 								<i class="fa fa-balance-scale"></i>
@@ -346,7 +346,7 @@
 						</div>
 					</div>
 					<!-- Item 3 -->
-					<div class="col-12 col-sm-6 col-md-6 mb-4 ">
+					<div class="col-12 col-sm-6 col-md-4 mb-4 ">
 						<div class="box-icon-1 text-center">
 							<div class="icon">
 								<i class="fa fa-balance-scale"></i>
@@ -359,7 +359,7 @@
 						</div>
 					</div>
 					<!-- Item 4 -->
-					<div class="col-12 col-sm-6 col-md-6 mb-4 ">
+					<div class="col-12 col-sm-6 col-md-4 mb-4 ">
 						<div class="box-icon-1 text-center">
 							<div class="icon">
 								<i class="fa fa-balance-scale"></i>
@@ -372,7 +372,7 @@
 						</div>
 					</div>
 					<!-- Item 5 -->
-					<div class="col-12 col-sm-6 col-md-6 mb-4 ">
+					<div class="col-12 col-sm-6 col-md-4 mb-4 ">
 						<div class="box-icon-1 text-center">
 							<div class="icon">
 								<i class="fa fa-balance-scale"></i>
@@ -385,7 +385,7 @@
 						</div>
 					</div>
 					<!-- Item 6 -->
-					<div class="col-12 col-sm-6 col-md-6 mb-4 ">
+					<div class="col-12 col-sm-6 col-md-4 mb-4 ">
 						<div class="box-icon-1 text-center">
 							<div class="icon">
 								<i class="fa fa-balance-scale"></i>
@@ -542,7 +542,7 @@
 						    </div>
 						    <div class="flip-card-back">
 						      <h4>Тарасенко Катерина</h4> 
-						      <p class="borderBtm">Адвокат</p> 
+						      <p class="borderBtm">Керівник корпоративної практики</p> 
 						      <p>Спеціалізується на корпоративному та міжнародному праві</p>
 		                		<a href="/lawyers/attorney/" class="btn btn-primary">Більше</a>
 						      	<div class="sosmed-icon icon-bg-secondary d-inline-flex">
