--- a/attorney/index.html
+++ b/attorney/index.html
@@ -179,7 +179,7 @@
 					        </div>
 					        <div class="col-sm-6 attText mt-3">
 					            <h4>Тарасенко Катерина</h4>
-					            <p class="description">Адвокат</p>
+					            <p class="description">Керівник корпоративної практики</p>
 								<p>Практикуючий юрист з 2004 року, закінчила  у 2005 році Одеський Національний Університет ім. І.І. Мечникова.</p>
 								<p>Спеціалізується з питань злиттів і поглинань,  банківського та фінансового права, корпоративного та комерційного права.</p>
 								<p>Консультує клієнтів щодо проектів у фінансовому, автопромисловому та рітейловому секторах.</p>	
